@@ -101,7 +101,7 @@ PKGCONFIG_VER=0.22
 
 PROJ_VER=4.8.0
 GDAL_VER=1.11.1
-OPENSCENEGRAPH_VER=3.2.1
+OPENSCENEGRAPH_VER=3.4.0
 
 VLC_VER=1.1.4
 
