@@ -5,6 +5,7 @@
   and removing of *.la files.
 * Bump GCC_EXTRA_VER from 5.1.0 to 5.2.0.
 * Update BINUTILS_VER from 2.25 to 2.26 in all configs.
+* Update OPENSCENEGRAPH_VER from 3.2.1 to 3.4.0 in all configs.
 * Update LIBPNG_VER from 1.2.53 to 1.2.56 in all static configs.
 
 --- v1.2 (2015-07-11) ---
